--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "eslint-jsx-example",
   "version": "1.0.0",
   "main": "main.js",
-  "scripts": {
-  },
+  "scripts": {},
   "devDependencies": {
+    "eslint": "^1.2.1",
+    "eslint-plugin-react": "^3.2.3"
   }
 }
